--- a/spring boot security workspace/spring-security-jwt-3.x/spring-security-jwt-3.x/src/main/resources/application.properties
+++ b/spring boot security workspace/spring-security-jwt-3.x/spring-security-jwt-3.x/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-	spring.application.name=spring-security-jwt-3.x
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt
+spring.application.name=spring-security-jwt-3.x
+spring.datasource.url=jdbc:mysql://localhost:3306/cgi_db
 spring.datasource.username=root
 spring.datasource.password=root@123
 spring.jpa.hibernate.ddl-auto=update
