--- a/Kafka Workspace/KafkaProducer/pom.xml
+++ b/Kafka Workspace/KafkaProducer/pom.xml
@@ -17,6 +17,14 @@
     	<artifactId>kafka_2.13</artifactId>
     	<version>3.2.3</version>
 	</dependency>
+	
+	 <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.14.0</version>
+    </dependency>
+
+
   </dependencies>
   
 </project>
